--- a/ansible/roles/local-setup/tasks/debian.yml
+++ b/ansible/roles/local-setup/tasks/debian.yml
@@ -87,6 +87,12 @@
     path: "{{ download_folder }}"
     state: directory
 
+- name: get tfsec
+  get_url:
+    url: "{{ tfsec_url }}"
+    dest: /usr/local/bin/tfsec
+    mode: ugo+x
+
 - name: get helm and terraform
   get_url:
     url: "{{ item }}"
