update terraform version, make vars more accessible

--- a/ansible/roles/local-setup/tasks/debian.yml
+++ b/ansible/roles/local-setup/tasks/debian.yml
@@ -69,6 +69,7 @@
      - botocore
      - pre-commit
      - detect-secrets
+     - checkov
 
 - name: add :set background=dark to /etc/vimrc
   blockinfile:
