--- a/ansible/setup-local.yml
+++ b/ansible/setup-local.yml
@@ -6,9 +6,9 @@
       private: yes
 
   vars:
-    helm_url: https://get.helm.sh/helm-v3.2.3-linux-amd64.tar.gz
-    terraform_url: https://releases.hashicorp.com/terraform/0.12.28/terraform_0.12.28_linux_amd64.zip
-    tfsec_url: https://github.com/liamg/tfsec/releases/tag/v0.23.2
+    helm_url: https://get.helm.sh/helm-v3.5.2-linux-amd64.tar.gz
+    terraform_url: https://releases.hashicorp.com/terraform/0.14.3/terraform_0.14.3_linux_amd64.zip
+    tflint_url: https://github.com/terraform-linters/tflint/releases/download/v0.24.1/tflint_linux_amd64.zip
 
   roles:
     - local-setup
